Fixed timer decimal point and lap container visibility when no laps are present

--- a/src/StopWatchButton.css
+++ b/src/StopWatchButton.css
@@ -21,6 +21,15 @@
 }
 
 .laps-container {
+    border: 1px solid #5a7947;
+    padding: 10px;
+    margin: 10px 0;
+    box-shadow: 3px 3px 5px 6px #5a7947;
+    margin-top: 20px;
+    text-shadow: 1px 1px 1px #5a7947;
+    background-color: #7b9d62;
+    color: white;
+
     margin-top: 20px;
     text-shadow: 1px 1px 1px black;
 }
@@ -30,5 +39,9 @@ body {
 }
 
 .timer-1 {
+    position: fixed;
+    bottom: 1200px;
+    width: 50%;
+    text-align: center;
     text-shadow: 1px 1px 1px black;
 }
